--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,9 +10,9 @@ jobs:
       postgres:
         image: postgres:11
         env:
-          POSTGRES_USER: testing
-          POSTGRES_PASSWORD: testing
-          POSTGRES_DB: testing
+          POSTGRES_USER: gorm
+          POSTGRES_PASSWORD: gorm
+          POSTGRES_DB: gorm
         ports:
         - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
